--- a/contact.html
+++ b/contact.html
@@ -185,7 +185,7 @@
                         <div class="footer-contact">
                             <p><i class="fas fa-envelope me-2"></i> info@lucentgo.com</p>
                             <p><i class="fas fa-phone-alt me-2"></i> +971 50 682 3975</p>
-                            <p><i class="fas fa-map-marker-alt me-2"></i> Habeeb Munawer Street, Farwaniya, Kuwait</p>
+                            <p><i class="fas fa-map-marker-alt me-2"></i> Bin Dasmal Building - 1 Al Quoz Industrial First, Dubai.</p>
                         </div>
                     </div>
                 </div>
@@ -216,4 +216,5 @@
         }
     </script>
 </body>
+
 </html>
