--- a/contact.html
+++ b/contact.html
@@ -127,21 +127,21 @@
                     <div class="single-contact-infos p-4 shadow-sm rounded h-100">
                         <div class="icon-box mb-3 text-primary"><i class="fas fa-map-marker-alt fa-3x"></i></div>
                         <h4>Our Office</h4>
-                        <p class="mt-3">Habeeb Munawer Street<br>Farwaniya, Kuwait</p>
+                        <p class="mt-3">Al Dabbous mall, Floor 4 O ce No. C-12Habeeb Munawer St. Block 4<br>Farwaniya, Kuwait</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="single-contact-infos p-4 shadow-sm rounded h-100">
                         <div class="icon-box mb-3 text-primary"><i class="fas fa-phone-alt fa-3x"></i></div>
                         <h4>Call Us</h4>
-                        <p class="mt-3"><a href="tel:+971506823975" class="text-dark fw-bold">+971 50 682 3975</a><br>24/7 Support Available</p>
+                        <p class="mt-3"><a href="tel:+965 9402 5195" class="text-dark fw-bold">+965 9402 5195</a><br>24/7 Support Available</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="single-contact-infos p-4 shadow-sm rounded h-100">
                         <div class="icon-box mb-3 text-primary"><i class="fas fa-envelope fa-3x"></i></div>
                         <h4>Email Us</h4>
-                        <p class="mt-3"><a href="mailto:info@lucentgo.com" class="text-dark fw-bold">info@lucentgo.com</a></p>
+                        <p class="mt-3"><a href="mailto:info@lucentgo.com" class="text-dark fw-bold">info@portalscompany.com</a></p>
                     </div>
                 </div>
             </div>
@@ -218,4 +218,5 @@
 </body>
 
 </html>
+
 
