--- a/index.html
+++ b/index.html
@@ -217,9 +217,9 @@
                     <div class="col-lg-4 sub-one-left mt-lg-0 mt-4">
                         <h6>Contact Info</h6>
                         <div class="footer-contact">
-                            <p><i class="fas fa-envelope me-2"></i> info@lucentgo.com</p>
-                            <p><i class="fas fa-phone-alt me-2"></i> +971 50 682 3975</p>
-                            <p><i class="fas fa-map-marker-alt me-2"></i> Bin Dasmal Building - 1 Al Quoz Industrial First, Dubai.</p>
+                            <p><i class="fas fa-envelope me-2"></i> info@portalscompany.com</p>
+                            <p><i class="fas fa-phone-alt me-2"></i> +965 9402 5195</p>
+                            <p><i class="fas fa-map-marker-alt me-2"></i> Al Dabbous mall, Floor 4 O ce No. C-12Habeeb Munawer St. Block 4, Farwaniya, Kuwait</p>
                         </div>
                     </div>
                 </div>
@@ -259,3 +259,4 @@
 </body>
 
 </html>
+
